Quick margin overflow fix

--- a/src/Components/Home/HomeComponent.scss
+++ b/src/Components/Home/HomeComponent.scss
@@ -12,13 +12,13 @@
 }
 }
 
-@media(max-width: 800px){
-    .headerrow{
-    .flexcontainer img{
-        max-width: 100%;
-    }
-    }
-}
+// @media(max-width: 800px){
+//     .headerrow{
+//     .flexcontainer img{
+//         max-width: 100%;
+//     }
+//     }
+// }
 
 @media(min-width: 1200px){
     .headerrow{
